[gd_scene load_steps=4 format=3 uid="uid://ds2cybquc26co"]

[ext_resource type="Script" path="res://Scripts/snow.gd" id="1_nsf77"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pvngl"]
size = Vector2(64, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e2ww2"]
size = Vector2(48, 40)

[node name="Snow" type="Area2D"]
script = ExtResource("1_nsf77")

[node name="coll" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_pvngl")

[node name="visual" type="Polygon2D" parent="."]
polygon = PackedVector2Array(-32, -24, -24, -32, 0, -24, 24, -32, 32, -24, 32, 32, -32, 32)

[node name="ground" type="StaticBody2D" parent="."]
position = Vector2(0, 28)

[node name="coll" type="CollisionPolygon2D" parent="ground"]
polygon = PackedVector2Array(-28, 0, -32, 4, 32, 4, 28, 0)
one_way_collision = true

[node name="slowdown" type="Area2D" parent="."]

[node name="coll" type="CollisionShape2D" parent="slowdown"]
position = Vector2(0, 4)
shape = SubResource("RectangleShape2D_e2ww2")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="body_entered" from="slowdown" to="." method="_on_slowdown_body_entered"]
[connection signal="body_exited" from="slowdown" to="." method="_on_slowdown_body_exited"]
